--- a/index.html
+++ b/index.html
@@ -8,19 +8,20 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link rel="stylesheet" href="style.css">
-  <title>Fabric</title>
+  <link rel="shortcut icon" href="imagenes/fabric-ico.ico" type="image/x-icon">
+  <title> Fabric | 100% Cuero Argentino </title>
 </head>
 
 <body>
   <div class="principal-cartel">
-    <p>Fabricamos tus accesorios</p>
+    <h1 class="titulo-cartel">Fabricamos tus accesorios</h1>
   </div>
 
   <header class="header ">
 
     <nav class="navbar navbar-expand-lg navbar-light ">
       <div class="container-fluid">
-        <h1> Fabric</h1>
+        <h2> Fabric</h2>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
           aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -40,6 +41,9 @@
               <a class="nav-link " href="#articulos">Articulos</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link " href="#cueros">Cueros</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link " href="#redes">Contacto</a>
             </li>
           </ul>
@@ -52,9 +56,11 @@
   <main>
     <section class="hero-img" id="nosotros">
       <div class="texto-hero">
-        <h2> Nosotros</h2>
-        <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit cupiditate incidunt illo optio modi dolore
-          totam id unde nulla qui repellendus nostrum excepturi facilis corrupti exercitationem animi, labore quae rem.
+        <h2 class="titulo-nosotros"> Nosotros</h2>
+        <p class="texto-nosotros"> Somos fabricantes de cuero legítimo hace 45 años.Diseñamos y confeccionamos bolsos ,
+          mochilas y cinturones.
+          Nuestros artículos son pensados para todas las edades.
+          Nos dedicamos a la venta mayorista hace 15 años , y contamos con clientes en todo el pais .
         </p>
         <div>
           <h4>Suscribite</h4>
@@ -65,58 +71,79 @@
     </section>
     <section class="mayoristas-section" id="mayoristas">
       <div class="card-uno">
-        <h3> Compra Minima </h3>
-        <p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Enim nostrum voluptatem neque. Omnis et magni
-          dolor, culpa corporis, provident vero labore neque, ullam saepe fugit alias inventore illum quos rem?</p>
+        <h3 class="titulo-card"> Stock Permanente </h3>
+        <p class="p-card"> Nuestra tienda mayorista cuenta con stock permanente para abastecer
+          a nuestros clientes con las últimas tendencias.Renovamos artículos todas las semanas.Compra minima en nuestro
+          local $25.000. </p>
       </div>
       <div class="card-dos">
-        <h3> Calidad</h3>
-        <p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Enim nostrum voluptatem neque. Omnis et magni
-          dolor, culpa corporis, provident vero labore neque, ullam saepe fugit alias inventore illum quos rem?</p>
+        <h3 class="titulo-card"> Atención al cliente</h3>
+        <p class="p-card"> Podes comunicarte con nuestros vendedores por télefono. Nuestras redes estan actualizadas
+          todos los dias .</p>
       </div>
       <div class="card-tres">
-        <h3>Envios </h3>
-        <p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Enim nostrum voluptatem neque. Omnis et magni
-          dolor, culpa corporis, provident vero labore neque, ullam saepe fugit alias inventore illum quos rem?</p>
+        <h3 class="titulo-card">Envios </h3>
+        <p class="p-card"> Despacho de pedidos a todo el pais y paises limitrofes . De lunes a viernes de 9 a 16 hs.
+        </p>
       </div>
     </section>
     <section id="articulos" class="galeria-container">
       <div class="galeria-item item-uno">
 
-        <img src="imagenes/bolso.jpg" alt="bolso de cuero">
-        <p class="titulo-item  titulo-item-uno">Nueva temporada</p>
+        <img src="imagenes/bandoleracalle.jpg" alt="bolso de cuero">
+        <p class=" titulo-item-uno"> Otoño | Invierno 22</p>
+      </div>
+      <div class="galeria-item  item-dos">
+
+        <img src="imagenes/mochilas.jpg" alt="mochila">
+
       </div>
       <div class="galeria-item ">
 
-        <img src="imagenes/mochilas.jpg" alt="mochila ">
-        <p class="titulo-item">Articulo</p>
-      </div>
-      <div class="galeria-item">
-
         <img src="imagenes/cinto.jpg" alt="cinto">
-        <p class="titulo-item">Articulo</p>
-      </div>
-      <div class="galeria-item item-dos ">
 
-        <img src="imagenes/cinto rosa.jpg " alt="carteras">
-        <p class="titulo-item">Articulo</p>
+      </div>
+      <div class="galeria-item ">
+
+        <img src="imagenes/bandoleranaranja.jpg " alt="carteras">
+
       </div>
 
       <div class="galeria-item">
-        <img src="imagenes/bandolera.jpg" alt="carteras">
-        <p class="titulo-item">Articulo</p>
+        <img src="imagenes/sobre.jpg" alt="carteras">
+
       </div>
       <div class="galeria-item">
 
-        <img src="imagenes/cartera3.jpg" alt="carteras">
-        <p class="titulo-item">Articulo</p>
+        <img src="imagenes/bandolerarojo.jpg" alt="carteras">
+
       </div>
       <div class="galeria-item">
 
-        <img src="imagenes/accesoriosdemoda.jpg" alt="carteras">
-        <p class="titulo-item">Articulo</p>
+        <img src="imagenes/cinto rosa.jpg" alt="cinturones">
+
       </div>
 
+    </section>
+
+
+
+    <section id="cueros" class="info-texto">
+      <div class="info-uno">
+        <h3 class="encabezado-uno"> Materiales</h3>
+        <p> Confeccionamos nuestros productos con cueros de altisima calidad. Trabajamos cueros flouter , gamuza , pelos
+          y grabados.Algunos de nuestros materiales son de edición limitada. </p>
+      </div>
+      <div class="info-dos">
+        <h3 class="encabezado-dos"> Duraderos </h3>
+        <p> Nuestros apliques son de zamac , ninguno presenta desgaste con el paso del tiempo. Conservando su color .
+        </p>
+      </div>
+      <div class="info-tres">
+        <h3 class="encabezado-tres">Producto Terminado</h3>
+        <p>Podes enviar tu diseño y nosotros lo confeccionamos. Ponete en contacto con nuestro departamento de diseño y
+          hacemos tu diseño realidad.</p>
+      </div>
     </section>
   </main>
 
