--- a/index.html
+++ b/index.html
@@ -24,38 +24,24 @@
 
   <header class="header">
 
-    <nav class="navbar navbar-expand-lg nav-style">
+    <nav class="navbar navbar-expand-lg">
       <div class="container-fluid">
-        <h2 class="titulo-marca"> Fabric </h2>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <h2 class="titulo-marca">Fabric</h2>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link " aria-current="page" href="#index">Inicio</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#nosotros">Nosotros</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#mayoristas">Mayoristas</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link " href="#articulos">Articulos</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link " href="#cueros">Cueros</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link " href="#redes">Contacto</a>
-            </li>
-          </ul>
+        <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+            <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+            <a class="nav-link" href="#nosotros">Nosotros</a>
+            <a class="nav-link" href="#mayoristas">Mayoristas</a>
+            <a class="nav-link" href="#articulos">Articulos</a>
+            <a class="nav-link" href="#cueros">Cueros</a>
+            <a class="nav-link" href="#redes">Contacto</a>
+          </div>
         </div>
       </div>
     </nav>
-
 
   </header>
   <main>
@@ -177,7 +163,7 @@
       <iframe
         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d52524.297362823236!2d-58.49263439629763!3d-34.635287873659486!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcc9883548fcc5%3A0x3feabdde36f96cb5!2sPlaza%20General%20Pueyrred%C3%B3n!5e0!3m2!1ses-419!2sar!4v1652652809719!5m2!1ses-419!2sar"
         width="300" height="250" style="border:0;" allowfullscreen="" loading="lazy"
-        referrerpolicy="no-referrer-when-downgrade"></iframe>
+        referrerpolicy="no-referrer-when-downgrade" title="Ubicacion de local "></iframe>
 
     </div>
     <div class="form-style">
