cambios en section

--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
     <nav class="navbar navbar-expand-lg">
       <div class="container-fluid">
         <h2 class="titulo-marca">Fabric</h2>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+          aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
@@ -55,8 +56,8 @@
         </p>
         <div>
           <h3 class="subtitulo-nosotros"> Suscribite</h3>
-          <input type="email" name="E-mail" id="" placeholder="E-mail"><br>
-          <input type="submit" value="Enviar" class="submit-style">
+          <input type="email" name="e-mail" placeholder="E-mail"><br>
+          <input type="button" value="Enviar" class="submit-style">
         </div>
       </div>
     </section>
@@ -64,17 +65,17 @@
 
       <div class="card-uno">
         <h3 class="titulo-card"> Stock </h3>
-        <p class="p-card"> Nuestra tienda mayorista cuenta con stock permanente para abastecer
+        <p> Nuestra tienda mayorista cuenta con stock permanente para abastecer
           a nuestros clientes con las últimas tendencias.</p>
       </div>
       <div class="card-dos">
         <h3 class="titulo-card"> Pedidos</h3>
-        <p class="p-card"> Podes comunicarte con nuestros vendedores por télefono. Nuestras redes estan actualizadas
+        <p> Podes comunicarte con nuestros vendedores por télefono. Nuestras redes estan actualizadas
           todos los dias .</p>
       </div>
       <div class="card-tres">
         <h3 class="titulo-card">Envios </h3>
-        <p class="p-card"> Despacho de pedidos a todo el pais y paises limitrofes . De lunes a viernes de 9 a 16 hs.
+        <p> Despacho de pedidos a todo el pais y paises limitrofes . De lunes a viernes de 9 a 16 hs.
         </p>
       </div>
     </section>
@@ -154,9 +155,7 @@
       <a href="mailto:anafernandaalbornoz">
         <h4>fabric@diseño.com</h4>
       </a>
-      <a href="tel:+#">
-        <h4> Llamanos</h4>
-      </a>
+
     </div>
     <div class="info-local">
       <h3> Las flores 2345 , Caba</h3>
@@ -168,11 +167,16 @@
     </div>
     <div class="form-style">
       <h4> Consultas</h4>
-      
+
+    </div>
+    <div>
+      <a href="https://api.whatsapp.com/send?phone=T..."><img src="imagenes/whats app grande.png" alt="whats app icono"
+          class="btn-chat"> </a>
     </div>
 
 
   </footer>
+  
 
   <!--  scripts -->
 
