cambios en section

--- a/index.html
+++ b/index.html
@@ -65,17 +65,17 @@
 
       <div class="card-uno">
         <h3 class="titulo-card"> Stock </h3>
-        <p> Nuestra tienda mayorista cuenta con stock permanente para abastecer
+        <p class="mayoristas"> Nuestra tienda mayorista cuenta con stock permanente para abastecer
           a nuestros clientes con las últimas tendencias.</p>
       </div>
       <div class="card-dos">
         <h3 class="titulo-card"> Pedidos</h3>
-        <p> Podes comunicarte con nuestros vendedores por télefono. Nuestras redes estan actualizadas
+        <p class="mayoristas"> Podes comunicarte con nuestros vendedores por télefono. Nuestras redes estan actualizadas
           todos los dias .</p>
       </div>
       <div class="card-tres">
         <h3 class="titulo-card">Envios </h3>
-        <p> Despacho de pedidos a todo el pais y paises limitrofes . De lunes a viernes de 9 a 16 hs.
+        <p class="mayoristas"> Despacho de pedidos a todo el pais y paises limitrofes . De lunes a viernes de 9 a 16 hs.
         </p>
       </div>
     </section>
@@ -123,22 +123,24 @@
     <section id="cueros" class="info-texto">
 
       <div class="info-uno">
-        <h3 class="encabezado-uno"> Materiales</h3>
-        <p class="parrafo-uno"> Confeccionamos nuestros productos con cueros de altisima calidad. Trabajamos cueros
+        <h3 class="encabezado-cueros"> Materiales</h3>
+        <p class="parrafo-cueros"> Confeccionamos nuestros productos con cueros de altisima calidad. Trabajamos cueros
           flouter , gamuza , pelos
           y grabados. </p>
       </div>
       <div class="info-dos">
-        <h3 class="encabezado-dos"> Duraderos </h3>
-        <p class="parrafo-dos"> Nuestros apliques son de zamac , ninguno presenta desgaste con el paso del tiempo.
-          Conservando su color .
+
+        <h3 class="encabezado-cueros">Producto </h3>
+        <p class="parrafo-cueros">Podes enviar tu diseño y nosotros lo confeccionamos. Ponete en contacto con nuestro
+          departamento de producto y
+          hacemos tu diseño realidad.</p>
+      
         </p>
       </div>
       <div class="info-tres">
-        <h3 class="encabezado-tres">Producto </h3>
-        <p class="parrafo-tres">Podes enviar tu diseño y nosotros lo confeccionamos. Ponete en contacto con nuestro
-          departamento de producto y
-          hacemos tu diseño realidad.</p>
+        <h3 class="encabezado-cueros"> Duraderos </h3>
+        <p class="parrafo-cueros"> Nuestros apliques son de zamac , ninguno presenta desgaste con el paso del tiempo.
+         Todos los materiales utilizados son duraderos , no presentan fallas.
       </div>
     </section>
   </main>
@@ -170,8 +172,10 @@
 
     </div>
     <div>
-      <a href="https://api.whatsapp.com/send?phone=T..."><img src="imagenes/whats app grande.png" alt="whats app icono"
-          class="btn-chat"> </a>
+      <a href="https://api.whatsapp.com/send?phone=T...">
+        <img src="imagenes/whats app grande.png" alt="icono whats app" class="btn-chat">
+      
+      </a>
     </div>
 
 
