cambios de estilos

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           Nos dedicamos a la venta mayorista hace 15 años , y contamos con clientes en todo el pais .
         </p>
         <div>
-          <h3 class="subtitulo-nosotros">Suscribite</h3>
+          <h3 class="subtitulo-nosotros">Newsletter</h3>
           
           <input type="email" name="email" id="" placeholder="E-mail"><br>
          
@@ -87,12 +87,12 @@
       </div>
       <div class="card-dos">
         <h3 class="titulo-card"> Pedidos</h3>
-        <p class="mayoristas"> Podes comunicarte con nuestros vendedores por télefono. Nuestras redes estan actualizadas
+        <p class="mayoristas"> Podes comunicarte con nuestros vendedores por whats app. Nuestras redes estan actualizadas
           todos los dias .</p>
       </div>
       <div class="card-tres">
         <h3 class="titulo-card">Envios </h3>
-        <p class="mayoristas"> Despacho de pedidos a todo el pais y paises limitrofes . De lunes a viernes de 9 a 16 hs.
+        <p class="mayoristas"> Despacho de pedidos a todo el pais y paises limitrofes .Trabajamos con los mejores transportes. De lunes a viernes de 9 a 16 hs.
         </p>
       </div>
     </section>
@@ -170,6 +170,7 @@
         <a href="http://www.tiktok.com" target="_blank"> <img src="imagenes/tiktok.png" alt="Tik Tok"></a>
         <a href="mailto:anafernandaalbornoz">
           <h4 class="titulo-email">fabric@diseño.com</h4>
+          <p class="p-info"> Fabric 2022  - Todos los derechos reservados</p>
         </a>
       </div>
       <div class="info-local">
@@ -195,7 +196,7 @@
           </a>
         </div>
 
-
+   
   </footer>
 
   <!--  scripts -->
