cambios en el style

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <meta name="keywords" content="Mochilas , cintos de mujer , cintos de hombre , cuero legitimo , fabricacion de accesorios , Argentina, mayoristas , bolsos , bandoleras ">
   <meta property="og:type" content="Web site">
   <meta property="og:type" title="Fabric Accesorios | 100% Cuero Argentino">
-  <meta property="og:url" content="https:fabricaccesorios.000webhostapp.com">
+  <meta property="og:url" content="https://fabricaccesorios.000webhostapp.com/">
   <meta property="og:image" content="https:www.fabricaccesorios.000webhostapp.com">
   <meta property="og:description" content=" Venta mayorista de bolsos , cinturones y mochilas de cuero. Descubri la coleccion Otoño | Invierno.Atención personalizada. Buenos Aires , Argentina.">
   <title>Fabric | 100% Cuero Argentino</title>
@@ -175,7 +175,7 @@
       </div>
       <div class="info-local">
         <h5 class="titulo-local"> Las flores 2345 , Caba</h5>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d52524.297362823236!2d-58.49263439629763!3d-34.635287873659486!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcc9883548fcc5%3A0x3feabdde36f96cb5!2sPlaza%20General%20Pueyrred%C3%B3n!5e0!3m2!1ses-419!2sar!4v1652652809719!5m2!1ses-419!2sar" width="250" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d52524.297362823236!2d-58.49263439629763!3d-34.635287873659486!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcc9883548fcc5%3A0x3feabdde36f96cb5!2sPlaza%20General%20Pueyrred%C3%B3n!5e0!3m2!1ses-419!2sar!4v1652652809719!5m2!1ses-419!2sar" width="250" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" title="Direccion del local "></iframe>
        
       </div>
      
