cambios en el index

--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
     content=" Venta mayorista de bolsos , cinturones y mochilas de cuero. Descubri la coleccion Otoño | Invierno.Atención personalizada. Buenos Aires , Argentina.">
   <meta name="keywords"
     content="Mochilas , cintos de mujer , cintos de hombre , cuero legitimo , fabricacion de accesorios , Argentina, mayoristas , bolsos , bandoleras ">
-  <meta property="og:type" content="Web site">
-  <meta property="og:type" title="Fabric Accesorios | 100% Cuero Argentino">
-  <meta property="og:url" content="https://fabricaccesorios.000webhostapp.com/">
-  <meta property="og:image" content="http://fabricaccesorios.000webhostapp.com/imagenes/accesoriosdemoda1.webp">
+  <meta property="og:type" content="Web site"/>
+  <meta property="og:type" title="Fabric Accesorios | 100% Cuero Argentino"/>
+  <meta property="og:url" content="http://fabricaccesorios.epizy.com/"/>
+  <meta property="og:image" content="http://fabricaccesorios.epizy.com/imagenes/bandoleracalle.webp"/>
   <meta property="og:description"
-    content=" Venta mayorista de bolsos , cinturones y mochilas de cuero. Descubri la coleccion Otoño | Invierno.Atención personalizada. Buenos Aires , Argentina.">
+    content=" Venta mayorista de bolsos , cinturones y mochilas de cuero. Descubri la coleccion Otoño | Invierno.Atención personalizada. Buenos Aires , Argentina."/>
   <title>Fabric | 100% Cuero Argentino</title>
 </head>
 
@@ -28,7 +28,6 @@
   </div>
 
   <header class="header">
-
     <nav class="navbar navbar-expand-lg navbar-light ">
       <div class="container-fluid">
         <h2 class="titulo-marca"> Fabric</h2>
@@ -60,8 +59,6 @@
         </div>
       </div>
     </nav>
-
-
   </header>
   <main>
     <section class="hero-img" id="nosotros">
@@ -157,7 +154,9 @@
       <a href="http://www.facebook.com" target="_blank"><img src="imagenes/facebook.png" alt="Facebook"></a>
       <a href="http://www.instagram.com" target="_blank"><img src="imagenes/instagram.png" alt="Instagram"></a>
       <a href="http://www.tiktok.com" target="_blank"><img src="imagenes/tiktok.png" alt="Tik Tok"></a>
-      <a href="mailto:anafernandaalbornoz@gmail.com"> <h4 class="titulo-email"> fabric@diseño.com </h4> </a>
+      <a href="mailto:anafernandaalbornoz@gmail.com">
+        <h4 class="titulo-email"> fabric@diseño.com </h4>
+      </a>
       <p class="p-info"> Fabric 2022 - Todos los derechos reservados</p>
       </a>
     </div>
