cambios en meta

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     content="Mochilas , cintos de mujer , cintos de hombre , cuero legitimo , fabricacion de accesorios , Argentina, mayoristas , bolsos , bandoleras ">
   <meta property="og:type" content="Web site"/>
   <meta property="og:type" title="Fabric Accesorios | 100% Cuero Argentino">
-  <meta property="og:url" content="http://fabricaccesorios.epizy.com/">
-  <meta property="og:image" content="http://fabricaccesorios.epizy.com/imagenes/bandoleracalle.webp">
+  <meta property="og:url" content="https://fabricaccesorios.000webhostapp.com/">
+  <meta property="og:image" content="https://fabricaccesorios.000webhostapp.com/imagenes/bandoleracalle.webp">
   <meta property="og:description" content=" Venta mayorista de bolsos , cinturones y mochilas de cuero. Descubri la coleccion Otoño | Invierno.Atención personalizada. Buenos Aires , Argentina.">
   <title>Fabric | 100% Cuero Argentino</title>
 </head>
