--- a/index.html
+++ b/index.html
@@ -9,10 +9,9 @@
   <link rel="stylesheet" href="css/style.css">
   <link rel="shortcut icon" href="imagenes/fabric-ico.ico" type="image/x-icon">
   <meta name="description"
-    content=" Venta mayorista de bolsos , cinturones y mochilas de cuero. Descubri la coleccion Otoño | Invierno.Atención personalizada. Buenos Aires , Argentina.">
+    content=" Venta mayorista de bolsos , cinturones y mochilas de cuero. Descubri la coleccion Otoño | Invierno.Atención personalizada. Buenos Aires , Argentina."/>
   <meta name="keywords"
-    content="Mochilas , cintos de mujer , cintos de hombre , cuero legitimo , fabricacion de accesorios , Argentina, mayoristas , bolsos , bandoleras ">
-  <meta property="og:type" content="Web site" />
+    content="Mochilas , cintos de mujer , cintos de hombre , cuero legitimo , fabricacion de accesorios , Argentina, mayoristas , bolsos , bandoleras "/>
   <meta property="og:type" title="Fabric Accesorios | 100% Cuero Argentino" />
   <meta property="og:url" content="https://fabricaccesorios.000webhostapp.com/">
   <meta property="og:image" content="https://fabricaccesorios.000webhostapp.com/imagenes/bandoleracalle.webp" />
@@ -23,8 +22,7 @@
   <div class="principal-cartel">
     <h1 class="titulo-cartel">Fabricamos tus accesorios | Compra minima $25.000 </h1>
   </div>
-
-  <header class="header">
+ <header class="header">
     <nav class="navbar navbar-expand-lg navbar-light ">
       <div class="container-fluid">
         <h2 class="titulo-marca"> Fabric</h2>
