--- a/index.html
+++ b/index.html
@@ -8,11 +8,10 @@
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link rel="stylesheet" href="css/style.css">
   <link rel="shortcut icon" href="imagenes/fabric-ico.ico" type="image/x-icon">
-  <meta name="description"
-    content=" Venta mayorista de bolsos , cinturones y mochilas de cuero. Descubri la coleccion Otoño | Invierno.Atención personalizada. Buenos Aires , Argentina."/>
-  <meta name="keywords"
-    content="Mochilas , cintos de mujer , cintos de hombre , cuero legitimo , fabricacion de accesorios , Argentina, mayoristas , bolsos , bandoleras "/>
-  <meta property="og:type" title="Fabric Accesorios | 100% Cuero Argentino" />
+  <meta name="description" content=" Venta mayorista de bolsos , cinturones y mochilas de cuero. Descubri la coleccion Otoño | Invierno.Atención personalizada. Buenos Aires , Argentina."/>
+  <meta name="keywords" content="Mochilas , cintos de mujer , cintos de hombre , cuero legitimo , fabricacion de accesorios , Argentina, mayoristas , bolsos , bandoleras "/>
+  <meta property="og:title" content="Venta Mayorista de accesorios de cuero "/>
+  <meta property="og:description" content="Fabrica de accesorios de cuero ." />
   <meta property="og:url" content="https://fabricaccesorios.000webhostapp.com/">
   <meta property="og:image" content="https://fabricaccesorios.000webhostapp.com/imagenes/bandoleracalle.webp" />
   <title>Fabric | 100% Cuero Argentino</title>
